plugins {
    id 'java'
    id 'application'
}

java {
    withSourcesJar()
    withJavadocJar()
}

jar {
    archiveBaseName = 'Java20'
    archiveVersion =  '0.1.0'
}

javadoc.options {
    addBooleanOption('-enable-preview', true)
    addStringOption('-release', '20')
    addStringOption('-add-modules', 'jdk.incubator.concurrent')
}

group 'org.sun.ghosh'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_20
targetCompatibility = JavaVersion.VERSION_20

ext {
    javaMainClass = "org.sun.ghosh.dependencyManagement.MyApp"
}

application {
    mainClassName = javaMainClass
    applicationDefaultJvmArgs = ["--enable-preview", '--add-modules', 'jdk.incubator.concurrent']
}

jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version,
                "Main-Class": javaMainClass)
    }
}

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs.addAll(
            ['--enable-preview',
             '--add-modules', 'jdk.incubator.concurrent'
            ])
}

dependencies {}
compileJava{
    dependsOn clean
}

test {
    useJUnitPlatform()
}